[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Backgrounds/background 2.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Bottom UI v 2.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Top UI v 2.png" type="Texture" id=3]
[ext_resource path="res://src/Grid.gd" type="Script" id=4]
[ext_resource path="res://src/IceHolder.gd" type="Script" id=5]

[node name="game_window" type="Node2D"]

[node name="background 2" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Bottom UI v 2" type="Sprite" parent="."]
position = Vector2( 0, 928 )
texture = ExtResource( 2 )
centered = false

[node name="Top UI v 2" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 4 )
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
empty_spaces = PoolVector2Array( 0, 0, 7, 0, 0, 9, 7, 9, 3, 4, 4, 4, 3, 5, 4, 5 )
ice_spaces = PoolVector2Array( 3, 0, 4, 0, 3, 9, 4, 9 )

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]
[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
